<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.example.wingsgroup.auth.RegistrationForm" />
        <variable
            name="handler"
            type="com.example.wingsgroup.auth.RegistrationHandler"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".auth.RegisterFragment">

        <LinearLayout
            android:id="@+id/banner_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_banner_bg">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginEnd="48dp"
                    android:src="@drawable/hero_illustration"
                    app:layout_constraintDimensionRatio="4:3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/banner_container">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Theme.Wingsgroup.TitleHero"
                        android:text="@string/register_form" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_username"
                        app:errorEnabled="true"
                        app:boxStrokeColor="@color/colorGrey"
                        app:hintTextColor="@color/colorGrey"
                        app:boxStrokeWidth="1dp"
                        app:boxCornerRadiusTopStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:startIconDrawable="@drawable/baseline_person"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="24dp"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textCursorDrawable="@null"
                            android:text="@={model.username}"
                            android:afterTextChanged="@{(editable) -> handler.usernameValidator(editable.toString())}"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_email"
                        app:errorEnabled="true"
                        app:boxStrokeColor="@color/colorGrey"
                        app:hintTextColor="@color/colorGrey"
                        app:boxStrokeWidth="1dp"
                        app:boxCornerRadiusTopStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:startIconDrawable="@drawable/baseline_email_24"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:textCursorDrawable="@null"
                            android:text="@={model.email}"
                            android:afterTextChanged="@{(editable) -> handler.emailValidator(editable.toString())}"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_password"
                        app:errorEnabled="true"
                        app:boxStrokeColor="@color/colorGrey"
                        app:hintTextColor="@color/colorGrey"
                        app:boxStrokeWidth="1dp"
                        app:boxCornerRadiusTopStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:startIconDrawable="@drawable/baseline_key_24"
                        app:endIconMode="password_toggle"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textCursorDrawable="@null"
                            android:text="@={model.password}"
                            android:afterTextChanged="@{(editable) -> handler.passwordValidator(editable.toString())}"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phone_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_phone"
                        app:errorEnabled="true"
                        app:boxStrokeColor="@color/colorGrey"
                        app:hintTextColor="@color/colorGrey"
                        app:boxStrokeWidth="1dp"
                        app:boxCornerRadiusTopStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:startIconDrawable="@drawable/baseline_phone"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone|number"
                            android:textCursorDrawable="@null"
                            android:text="@={model.phone}"
                            android:afterTextChanged="@{(editable) -> handler.phoneValidator(editable.toString())}"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/register_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textColor="@android:color/white"
                        android:backgroundTint="?attr/colorPrimaryVariant"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="40dp"
                        />


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp">

                        <TextView
                            android:id="@+id/login_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_description"
                            style="@style/Theme.Wingsgroup.TitleSmall"
                            app:layout_constraintEnd_toStartOf="@+id/signin_btn"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintHorizontal_chainStyle="packed"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/signin_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_in"
                            style="@style/Theme.Wingsgroup.TitleSmall"
                            android:textColor="?attr/colorPrimaryVariant"
                            android:fontFamily="@font/roboto_bold"
                            android:layout_marginStart="8dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/login_description"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</layout>